--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-rt = "*"
+futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.83"
 lazy_static = "1.4.0"
+vaultrs = "0.6.2"
 [dependencies.rocket]
 version = "0.5.0-rc.1"
 features = ["json"]
